# kratix-foundry

./: .gitignore  README.md  campaigns-beta-deployment.yaml  oneshots-httproute-check.yaml  oneshots-httproute-inactive.yaml
.github/workflows/: build-images.yaml
deploy/argocd/: cert-manager.yaml  fluxcd.yaml  kratix-foundry-promises.yaml  kratix-infrastructure.yaml  kratix.yaml
deploy/examples/: foundry-license-example.yaml
deploy/infrastructure/: flux-bucket.yaml  kustomization.yaml  (+2 more)
discord-bot/: .dockerignore  .env.example  Dockerfile  SETUP.md  bot.py  cache.py  config.py  embeds.py  k8s_client.py  pyproject.toml  requirements.txt  tasks.py  views.py
discord-bot/cogs/: __init__.py  create.py  delete.py  help.py  password.py  status.py  update.py
discord-bot/utils/: versions.py
docs/: SETUP.md  architecture-control-model.md  planned-features.md  usage.md
examples/: foundry-instance-standby.yaml  foundry-instance.yaml  foundry-license.yaml  instance-active.yaml  instance-campaign-beta.yaml  instance-cloned-world.yaml  instance-with-shared-plugins.yaml  license.yaml
kratix-fluxcd-test/: README.md  nginx-promise.yaml  nginx-request.yaml  redis-request.yaml  setup.yaml
manifests/: dnsendpoint-crd.yaml  eg-class.yaml  eg-envoy-proxy.yaml  eg-gateway.yaml  flux-kratix-source.yaml  foundry-standby-page.yaml  gateway.yaml  infrastructure.yaml  kratix.yaml  storage-setup.yaml
scripts/: setup-dev-env.sh  setup-local-env.sh  setup-orbstack-env.sh
standby-page/: Dockerfile  app.js  index.html  server.js  styles.css
tests/: test_foundry_license_pipeline.py
(+42 files in other folders)
